added right click functionality

--- a/Sikuli4NetTests/Sikuli4NetTests.csproj
+++ b/Sikuli4NetTests/Sikuli4NetTests.csproj
@@ -68,6 +68,9 @@
     <None Include="ChromeIcon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="ChromeJumpList.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="CloseChrome.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
